# leilao-aggregator

./: .gitignore  ALTERACOES_GEOCODING.md  CHECKLIST_VALIDACAO_COMPLETA.md  CORRECAO_WORKFLOW_RESUMO.md  DIAGNOSTICO_GITHUB_ACTIONS.md  DIAGNOSTICO_SITE_EM_BRANCO.md  GITHUB_SECRETS_SETUP.md  IMPLEMENTACAO_LEILOHUB.md  LANCE_JUDICIAL_INVESTIGACAO.md  RELATORIO_EXECUCAO_4_FASES.md  RESULTADO_INVESTIGACAO_LANCE_JUDICIAL.md  SOLD_FILTRO_143_DESCOBERTO.md  SOLD_FILTRO_FINAL.md  SOLD_INVESTIGACAO_RESULTADO.md  TAREFA_AUTONOMA_DIAGNOSTICO_LEILOHUB.md  TAREFA_CORRIGIR_GEOCODING.md  VALIDACAO_FRONTEND_29-12-2025.md  debug_sites.py  debug_sold_duplicados.py  debug_sold_sem_id.py  executar_scraping_completo.py
leilao-backend/: .env  CONCLUSAO_INVESTIGACAO.md  DIAGNOSTICO_DATABASE_URL.md  Dockerfile  ESTRATEGIA_OTIMIZADA_RESUMO.md  GUIA_RAPIDO_QUALIDADE_DADOS.md  IMPLEMENTACAO_DESCOBERTA_ESTRUTURA.md  INVESTIGACAO_FINAL_STORE_IDS.md  RELATORIO_ANALISE_SITES_FALHADOS.md  RELATORIO_CORRECAO_QUALIDADE_DADOS.md  RELATORIO_CORRECOES_CAIXA_20260110.md  RELATORIO_DIAGNOSTICO_COMPLETO.md  RELATORIO_ERROS_SCRAPERS.md  RELATORIO_FINAL_CORRECOES_20260110.md  RELATORIO_IMPLEMENTACAO_CORRECOES.md  RELATORIO_NOTURNO_20260109.md  RELATORIO_PAGINACAO.md  RELATORIO_TIER3_ANALISE.md  RELATORIO_TIER3_TESTE.md  RESULTADO_INVESTIGACAO_PORTAL_ZUK.md  RESUMO_CORRECAO_QUALIDADE_DADOS_FINAL.md  RESUMO_CORRECOES_3_PROBLEMAS.md  RESUMO_CORRECOES_EXECUTADAS.md  RESUMO_CORRECOES_SCRAPERS.md  RESUMO_PAGINACAO.md  RESUMO_STORE_IDS.md  TAREFA_ANALISAR_GIGANTES.py  TAREFA_ANALISE_MCP_BROWSER.py  (+117 more)
(+352 files in other folders)
