[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.124.0"}
psycopg = {extras = ["binary"], version = "^3.3.2"}
pydantic = "^2.12.5"
python-dotenv = "^1.2.1"
selenium = "^4.39.0"
webdriver-manager = "^4.0.2"
apscheduler = "^3.11.1"
beautifulsoup4 = "^4.14.3"
lxml = "^6.0.2"
psycopg2-binary = "^2.9.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
